--- a/Simple_CSharp_Games/Games/FountainGame.razor.css
+++ b/Simple_CSharp_Games/Games/FountainGame.razor.css
@@ -7,3 +7,10 @@
     color: white;
     font-size: 1.25rem;
 }
+
+.gameControls-wrapper:focus, 
+.fountain-startScreen:focus {
+    outline: 2px solid red;
+    outline-offset: 4px;
+    border-radius: 6px;
+}
